src/objects/PegaService__c/PegaService__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting stores the Service endpoints of Pega</description>
    <label>Pega Service Endpoints</label>
</CustomObject>