src/objects/PegaService__c/fields/Create_Case__c.field-meta.xml
<CustomField>
    <fullName>Create_Case__c</fullName>
    <description>Create Case Service Endpoint</description>
    <label>Create Case</label>
    <type>Url</type>
</CustomField>