src/objects/PegaService__c/fields/Email_To_Pega__c.field-meta.xml
<CustomField>
    <fullName>Email_To_Pega__c</fullName>
    <description>Email service endpoint</description>
    <label>Email To Pega</label>
    <type>Url</type>
</CustomField>