src/objects/PegaService__c/fields/Token_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_Endpoint__c</fullName>
    <label>Token Endpoint</label>
    <type>Url</type>
</CustomField>